# Project-Manager

backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260430052815_init/: migration.sql
backend/prisma/migrations/20260501054406_project/: migration.sql
backend/prisma/migrations/20260501093515_project/: migration.sql
backend/prisma/migrations/20260502100551_project/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/db/: db.module.ts  db.service.ts
backend/src/projects/: projects.controller.ts  projects.module.ts  projects.service.ts
backend/src/projects/dto/: UpdateProject.dto.ts  createProject.dto.ts  patchProject.dto.ts
backend/src/server/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/tasks/: tasks.controller.ts  tasks.module.ts  tasks.service.ts
backend/src/tasks/dto/: AssignTask.dto.ts  CreateTaskDto.dto.ts  PatchTaskDto.dto.ts  UpdateTask.dto.ts
backend/src/user/: user.controller.ts  user.module.ts  user.service.ts
backend/src/user/dto/: UpdateUserDto.dto.ts
chatbot/: app.py  pyproject.toml  requirements.txt
chatbot/src/: model.py  prompt.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/admin/: layout.js  page.js
frontend/src/components/: AddUser.js  AdminCard.js  App-sidebar.js  AssignTask.js  Chatbot.js  CreateProject.js  CreateTask.js  Delete.js  EditProject.js  EditTask.js  EditUser.js  Loader.js  LoggedIn.js  ProjectCard.js  ShowPassword.js  UserCard.js  UserTaskCard.js  Wrapper.js
(+18 files in other folders)
